New movement vector for moveing units